# ternary-wasm

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: browser_engine.rs  cell_engine.rs  export_bindings.rs  lib.rs  wasm_bridge.rs  wasm_config.rs
tests/: integration.rs
